report compilation added

--- a/report/plan.tex
+++ b/report/plan.tex
@@ -6,20 +6,11 @@
 
 	\vspace*{2cm}
 
-	\setlength{\extrarowheight}{0.25cm}
-	\begin{tabularx}{\textwidth}{ X X }
-		& Утверждаю \\
-		& Зав. кафедрой МО ЭВМ \\
-		& \uline{\hspace{3cm}} Иванов И. И. \\
-		& \emptydate
-	\end{tabularx}
+	\confirmation
 
 	\vspace*{3cm}
 	
-	\begin{tabularx}{\textwidth}{ X X }
-		Студент \hspace{1cm} Сергеев А. Д. & {\raggedright{Группа 8304}} \\
-		Тема работы: Наименование темы
-	\end{tabularx}
+	\worktitle
 
 	\vspace*{4cm}
 	
@@ -35,13 +26,7 @@
 
 	\vspace*{4cm}
 
-	\begin{tabularx}{\textwidth}[t]{ X X X X }
-		Студент & & & Сергеев А. Д. \\ \cline{3-3} \\
-		Руководитель & & & Иванов И. И. \\ \cline{3-3}
-		& \subscript{(Уч. степень, уч. звание)} & & \\
-		Консультант & & & Иванов И. И. \\ \cline{3-3}
-		& \subscript{(Уч. степень, уч. звание)} & & \\
-	\end{tabularx}
+	\subsblock
 \end{center}
 
 \clearpage
