--- a/report/task.tex
+++ b/report/task.tex
@@ -6,22 +6,12 @@
 
 	\vspace*{2cm}
 
-	\setlength{\extrarowheight}{0.25cm}
-	\begin{tabularx}{\textwidth}{ X X }
-		& Утверждаю \\
-		& Зав. кафедрой МО ЭВМ \\
-		& \uline{\hspace{3cm}} Иванов И. И. \\
-		& \emptydate
-	\end{tabularx}
+	\confirmation
 
 	\vspace*{3cm}
 	
-	\begin{tabularx}{\textwidth}{ X X }
-		Студент \hspace{1cm} Сергеев А. Д. & \raggedleft{Группа 8304}
-	\end{tabularx}
-
+	\worktitle
 	\begin{tabularx}{\textwidth}{ X }
-		Тема работы: Наименование темы \\
 		Место выполнения ВКР: место выполнения ВКР \\
 		Исходные данные (технические требования): \\
 		кратко указываются основные требования к ВКР \\
@@ -40,13 +30,7 @@
 
 	\vspace*{3cm}
 
-	\begin{tabularx}{\textwidth}[t]{ X X X X }
-		Студент & & & Сергеев А. Д. \\ \cline{3-3} \\
-		Руководитель & & & Иванов И. И. \\ \cline{3-3}
-		& \subscript{(Уч. степень, уч. звание)} & & \\
-		Консультант & & & Иванов И. И. \\ \cline{3-3}
-		& \subscript{(Уч. степень, уч. звание)} & & \\
-	\end{tabularx}
+	\subsblock
 \end{center}
 
 \clearpage
