--- a/report/title.tex
+++ b/report/title.tex
@@ -32,14 +32,7 @@
 
 	\vspace*{5cm}
 	
-	\begin{tabularx}{\textwidth}[t]{ X X X X }
-		Студент & & & Сергеев А. Д. \\ \cline{3-3}
-		& & \subscript{(подпись)} & \\
-		Руководитель & & & Иванов И. И. \\ \cline{3-3}
-		& \subscript{(Уч. степень, уч. звание)} & \subscript{(подпись)} & \\
-		Консультант & & & Иванов И. И. \\ \cline{3-3}
-		& \subscript{(Уч. степень, уч. звание)} & \subscript{(подпись)} & \\
-	\end{tabularx}
+	\subsblock
 
 	\vspace*{5cm}
 	
