--- a/report/report.tex
+++ b/report/report.tex
@@ -4,10 +4,12 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T2A]{fontenc}
 \usepackage[english, russian]{babel}
-\usepackage[colorlinks=true, urlcolor=blue]{hyperref}
 \usepackage{tempora}
 \usepackage{tabularx}
 \usepackage{ulem}
+\usepackage{tocloft}
+\usepackage{titlesec}
+\usepackage[colorlinks=true, linkcolor=, urlcolor=blue]{hyperref}
 
 \begin{document}
 	\setlength\parindent{0pt}
@@ -16,5 +18,6 @@
 	\input{title.tex}
 	\input{task.tex}
 	\input{plan.tex}
+	\input{contents.tex}
 	\input{document.tex}
 \end{document}
