--- a/report/contents.tex
+++ b/report/contents.tex
@@ -1,7 +1,9 @@
 \renewcommand{\cfttoctitlefont}{\textbf}
 \renewcommand{\cftchapfont}{}
 \renewcommand{\cftchappagefont}{\textbf}
+\setcounter{secnumdepth}{0}
 
 \tableofcontents
 
+\thispagestyle{empty}
 \clearpage
