--- a/report/document.tex
+++ b/report/document.tex
@@ -1,3 +1,22 @@
-\chapter{Введение}
+\section{Введение}
 
+\tab
+В настоящий момент становится особенно актуальной проблема распространения потенциально опасных для человека видов растений.
+При этом под потенциально опасными следует понимать как те растения, которые представляют прямую угрозу жизни и здоровью человека, так и те, которые негативно влияют на сельскохозяйственную, промышленную и иные сферы деятельности человека\cite{alien-plants}.
+Отчасти актуальность этой проблемы объясняется расширением пригодных для произрастания таких растений территорий, связанным с глобальным потеплением\cite{invasive-plants, poisonous-ivy}. \\
 
+\tab
+В европейской части России одним из самых опасных растений является борщевик Сосновского\cite{heracleum}, поэтому в данной работе контроль над распространением потенциально опасных растений рассматривается на его примере.
+Согласно данным из открытой базы данных РИВР\cite{rivr} на территории Санкт-Петербурга и Ленинградской области насчитывается более 350 очагов распространения Heracleum sosnowskyi.
+По данным, опубликованным в журнале Esquire\cite{esquire} борщевик занимает до 15\% природных ландшафтов европейской части России. \\
+
+\tab
+Несмотря на это на сегодняшний день не существует специализированного ИТ решения для контроля над распространением потенциально опасных видов растений, который, помимо наблюдения и каталогизации, включал бы в себя взаимодействие с группами специалистов, способными устранить и остановить очаги распространения.
+Разработка архитектуры такого сервиса, позволяющего решить проблему распространения потенциально опасных для человека видов растений и контроля их популяции, стало основной целью данного исследования.
+Такой сервис должен позволить широким массам добровольцев осуществлять наблюдение за потенциально опасными видами растений, а также давать группе экологов возможность осуществлять модерацию и анализ собранных данных.
+Для достижения данной цели были сформулированы следующие задачи:
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0pt]
+	\item Разработка архитектуры, описание ее компонентов и путей передачи данных.
+	\item Выбор технологий для создания сервера для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
+	\item Выбор технологий для создания кроссплатформенного мобильного и web приложения, позволяющего добровольцем заносить наблюдения в систему.
+\end{enumerate}
