--- a/report/support.tex
+++ b/report/support.tex
@@ -39,4 +39,8 @@
 
 
 
-\titleformat{\chapter}[display] {}{} {0pt}{\textbf} 
+\newcommand{\tab}{\hspace{0.5cm}}
+
+\titleformat{\section}[display] {}{} {0pt}{\textbf}
+
+\renewcommand\bibname{\normalsize Список литературы}
