--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -9,8 +9,9 @@
 	
 	\bibitem{heracleum}
 	https://cyberleninka.ru/article/n/borschevik-sosnovskogo-v-rossiyskoy-federatsii/viewer
-	\bibitem{rivr}
-	https://ib.komisc.ru/add/rivr // Официальный сайт проекта РИВР, дата обращения: 26.12.2021
-	\bibitem{esquire}
-	https://esquire.ru/articles/5849-cow-parsnip // Статья в журнале Esquire, посвященная борщевику Cосновского, дата обращения: 12.01.2022
+	\webbibitem{rivr}{https://ib.komisc.ru/add/rivr}{Официальный сайт проекта РИВР}{26.12.2021}
+	\webbibitem{esquire}{https://esquire.ru/articles/5849-cow-parsnip}{Статья в журнале Esquire, посвященная борщевику Cосновского}{12.01.2022}
+	
+	\bibitem{control}
+	Словарь русского языка [Текст]: толковый словарь современного русского литературного языка / С. И. Ожегов, ред. Н. Ю. Шведова – 16-е изд., исправленное. – Москва: Русский язык, 1984. – 251 с.
 \end{thebibliography}
