--- a/report/plan.tex
+++ b/report/plan.tex
@@ -1,7 +1,7 @@
 \begin{center}
 	\textbf{
 		КАЛЕНДАРНЫЙ ПЛАН ВЫПОЛНЕНИЯ \\
-		ВЫПУСКНОЙ УВАЛИФИКАЦИОННОЙ РАБОТЫ
+		ВЫПУСКНОЙ КВАЛИФИКАЦИОННОЙ РАБОТЫ
 	}
 
 	\vspace*{2cm}
