--- a/report/task.tex
+++ b/report/task.tex
@@ -12,7 +12,7 @@
 	
 	\worktitle
 	\begin{tabularx}{\textwidth}{ X }
-		Место выполнения ВКР: место выполнения ВКР \\
+		Место выполнения ВКР: СПбГЭТУ «ЛЭТИ» кафедра МО ЭВМ \\
 		Исходные данные (технические требования): \\
 		кратко указываются основные требования к ВКР \\
 		Содержание ВКР: \\
