--- a/report/title.tex
+++ b/report/title.tex
@@ -14,7 +14,7 @@
 		\textbf{Факультет} & ФКТИ \\
 		\textbf{Кафедра} & МО ЭВМ \\
 		\textit{К защите допустить} & \\
-		Зав. кафедрой & {\raggedleft{Иванов И. И.}}
+		Зав. кафедрой & {\raggedleft{Кринкин К. В.}}
 	\end{tabularx}
 
 	\vspace*{3cm}
