--- a/report/document.tex
+++ b/report/document.tex
@@ -1,22 +1,179 @@
 \section{Введение}
-
 \tab
 В настоящий момент становится особенно актуальной проблема распространения потенциально опасных для человека видов растений.
 При этом под потенциально опасными следует понимать как те растения, которые представляют прямую угрозу жизни и здоровью человека, так и те, которые негативно влияют на сельскохозяйственную, промышленную и иные сферы деятельности человека\cite{alien-plants}.
-Отчасти актуальность этой проблемы объясняется расширением пригодных для произрастания таких растений территорий, связанным с глобальным потеплением\cite{invasive-plants, poisonous-ivy}. \\
+Отчасти актуальность этой проблемы объясняется расширением пригодных для произрастания таких растений территорий\cite{invasive-plants, poisonous-ivy}.
 
-\tab
+\nwln
 В европейской части России одним из самых опасных растений является борщевик Сосновского\cite{heracleum}, поэтому в данной работе контроль над распространением потенциально опасных растений рассматривается на его примере.
 Согласно данным из открытой базы данных РИВР\cite{rivr} на территории Санкт-Петербурга и Ленинградской области насчитывается более 350 очагов распространения Heracleum sosnowskyi.
-По данным, опубликованным в журнале Esquire\cite{esquire} борщевик занимает до 15\% природных ландшафтов европейской части России. \\
+По данным, опубликованным в журнале Esquire\cite{esquire} борщевик занимает до 15\% природных ландшафтов европейской части России.
+
+\nwln
+На сегодняшний день не существует специализированного автоматизированного компьютерного решения для контроля над распространением потенциально опасных видов растений, которое, помимо наблюдения и каталогизации, включало бы в себя взаимодействие с группами специалистов, способными устранить и остановить очаги распространения.
+
+\nwln
+\textbf{Целью данной работы} стала разработка такой системы, позволяющей решить проблему распространения потенциально опасных для человека видов растений и контроля их популяции.
+Такая система должна позволить широким массам добровольцев осуществлять наблюдение за потенциально опасными видами растений, а также давать группе экологов возможность осуществлять модерацию и анализ собранных данных.
+
+\nwln
+\textbf{Для достижения данной цели были сформулированы следующие задачи}:
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+	\item Разработка архитектуры, описание ее компонентов и путей передачи данных.
+	\item Создание сервера для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
+	\item Создание кроссплатформенного мобильного и web приложения, позволяющего добровольцем заносить наблюдения в систему.
+\end{enumerate}
+
+\nwln
+\textbf{Объектом данного исследования} являются особенности создания кроссплатформенной системы, реализующей клиент-серверную архитектуру и позволяющей решить проблему распространения вредоносных растений.
+
+\nwln
+\textbf{Предметом данного исследования} является распространение опасных для человека видов растений, контроль их популяции.
+
+\nwln
+\textbf{Практическая ценность данной работы} заключается в возможности контроля над распространением потенциально опасных видов растений (в частности, Борщевика Сосновского) на территории Санкт-Петербурга и Ленинградской области.
+
+\section{Обзор предметной области}
+
+\subsection{Понятие контроля}
 
 \tab
-Несмотря на это на сегодняшний день не существует специализированного ИТ решения для контроля над распространением потенциально опасных видов растений, который, помимо наблюдения и каталогизации, включал бы в себя взаимодействие с группами специалистов, способными устранить и остановить очаги распространения.
-Разработка архитектуры такого сервиса, позволяющего решить проблему распространения потенциально опасных для человека видов растений и контроля их популяции, стало основной целью данного исследования.
-Такой сервис должен позволить широким массам добровольцев осуществлять наблюдение за потенциально опасными видами растений, а также давать группе экологов возможность осуществлять модерацию и анализ собранных данных.
-Для достижения данной цели были сформулированы следующие задачи:
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0pt]
-	\item Разработка архитектуры, описание ее компонентов и путей передачи данных.
-	\item Выбор технологий для создания сервера для сбора и хранения данных, а также системы анализа и модерирования наблюдений с web-интерфейсом.
-	\item Выбор технологий для создания кроссплатформенного мобильного и web приложения, позволяющего добровольцем заносить наблюдения в систему.
+В словаре\cite{control} указано, что слово \textquote{контроль} означает проверку и наблюдение с целью проверки.
+В рамках данной работы под контролем над распространением потенциально опасных для человека видов растений предлагается понимать также возможность принятия необходимых мер для устранения негативных последствий распространения этих растений.
+Предполагается, что контроль над такими растениями будет поручен группе учёных-экологов, в обязанности которых будет входить работа с системой.
+
+\nwln
+Для осуществления контроля (по данному выше определению) необходимо хранение информации об очагах распространения опасных растений, которая включает в себя фотографии растения, его географические координаты и краткое описание, данное обнаружившим его человеком, самого растения, а также места его произрастания.
+Такой набор данных в данной работе будет называться \linkterm{report}{отчет}.
+В случае наблюдения за несколькими видами потенциально опасных растений каждый отчет также должен содержать информацию о видовой принадлежности обнаруженного растения.
+В следствии того, что эти сведения со временем могут терять актуальность или же требовать модерации, в отчете необходимо также хранить информацию о статусе данных и дате совершения наблюдения.
+Предлашается использование трёх статусов: \textquote{необработано}, \textquote{актуально}, \textquote{неактуально}; в зависимости от необходимых мер контроля можно добавить и другие.
+
+\nwln
+Для осуществления поиска и анализа данных необходима функция сортировки и поиска конкретного наблюдения по нескольким признакам. Такая функция в данной работе будет называться \linkterm{processing}{обработка данных}. \\
+
+\subsection{Источник информации}
+
+\tab
+В качестве источника информации и средства наблюдения предлагается использовать неограниченное количество волонтеров, заинтересованных в решении экологических проблем.
+Эти люди в данной работе будут называться \linkterm{users}{пользователями} системы.
+Такое решение позволит получать большое количество актуальной информации, но в следствие отсутствия профессиональной подготовки волонтеров точность такой информации снизится.
+Также возможно возникновение случаев необходимости модерации присланных волонтёрами данных.
+
+\nwln
+В качестве меры модерации предлагается необходимость регистрации волонтёров при помощи подтвержденного адреса электронной почты (в последствии возможно добавление других методов авторизации), а также наличие возможности редактирования и удаления всех загруженных данных.
+Кроме того, для предоставления возможности связи с волонтёрами, в каждый отчет необходимо включить информацию о пользователе, совершившем наблюдение, описанное в отчете.
+Люди, в обязанности которых будет входить модерация отчетов и взаимодействие с пользователями в данной работе будут называться \linkterm{admins}{администраторами} системы.
+
+\nwln
+В качестве меры повышения точности присланных волонтёрами данных предлагается создание автоматической системы распознавания определенных видов растений на фотографиях, а также ручная проверка присланных пользователями данных.
+Люди, в обязанности которых будет входить проверка и обработка присланных данных в данной работе будут называться \linkterm{specialists}{специалистами} системы. \\
+
+\subsection{Доступ к данным}
+
+\tab
+Для охвата более широкой группы добровольцев и их удобства необходима возможность отложенной отправки данных в случае, если пользователь находится вне зоны действия сети.
+Этого возможно добиться при помощи создания мобильных приложений для операционных систем iOS и Android.
+Также необходимо наличие вебинтерфейса отправки данных для пользователей, не желающих устанавливать приложение.
+Кроме того желательно предоставление возможности интеграции системы со сторонними клиентскими приложениями путём создания документированного API для отправки данных в систему.
+
+\nwln
+Для осуществления модерации и обработки данных требуется создание сервисного вебинтерфейса, который далее в данной работе будет называться \linkterm{servicesite}{сервисный сайт} системы.
+Также для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения обработанных данных в формате \textquote{CSV}.
+Также желательно наличие возможности демонстрации статистики собранных данных на сторонних сайтах путём создания документированного API для демонстрации данных, загруженных в систему. \\
+
+\subsection{Существующие решения}
+
+\tab
+Несмотря на то, что системы, решающей именно эту проблему пока не существует, можно найти множество систем с похожей функциональностью.
+Для того, чтобы определить, нельзя ли вместо создания нового использовать готовое решение или его фрагменты, было произведено сравнение систем с аналогичной или похожей функциональностью по нескольким критериям.
+
+\nwln
+Поиск аналогов производился среди систем, которые используются экологами для фиксации месторасположения борщевика в настоящий момент, а также по ключевым словам “фотофиксация растений”, “поиск и фотофиксация”, а также “составление пользовательских карт”.
+В качестве аналогов были выбраны сервисы, позволяющие отмечать что-либо на карте, производить поиск растений или же просто собирать и обрабатывать пользовательские данные.
+
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+	\item iNaturalist \\
+	iNaturalist [3] - сервис для наблюдения за живыми организмами, разработанный Калифорнийской академией наук совместно с National Geographic.
+	Сервис позволяет глобальному сообществу волонтеров наблюдать за живыми организмами и присылать собранную информацию о них на сайт.
+	Такие отчеты находятся в общем доступе и могут быть загружены с официального сайта.
+	\item РИВР \\
+	РИВР [1] (распространение инвазивных видов растений) - открытая база данных, разработанная и поддерживаемая ИБ Коми НЦ УрО РАН.
+	Посвящена исключительно Борщевику Сосновского и его распространению на территории России.
+	Позволяет пользователям отправлять данные о найденных местах произрастания растения, которые на данный момент доступны только для просмотра на сайте.
+	\item Google MyMaps \\
+	Google MyMaps [4] - это сервис для создания пользовательских карт на основе сервиса Google Maps.
+	Позволяет создавать карты с набором пользовательских отметок и их описанием, доступ к таким картам осуществляется так же, как к файлам, хранящимся на Google Drive.
+	Также позволяет единовременно импортировать данные их .csv файла или из Google SpreadSheets.
+	\item Plant Finder \\
+	Plant Finder [5] - сервис, созданный для документации и
+	учета мест произрастания и хранения растений. Сервис
+	предоставляет пользователям возможность отмечать на
+	карте места собранных ими коллекций растений. Также
+	для пользователей доступна возможность создания
+	частных карт с пользовательским набором растений. На
+	таких частных картах есть возможность открытия
+	публичного доступа к отметкам и данным.
+	\item Flora Incognita \\
+	Flora Incognita [6] - приложение, позволяющее
+	идентифицировать и сохранять данные о найденных
+	растениях. Оно разработано совместно с Technische
+	Universität Ilmenau и Max-Planck-Institut für Biogeochemie.
+	Также в приложении доступно описание каждого
+	растения, которое оно может идентифицировать.
 \end{enumerate}
+
+\nwln
+Критерии сравнения аналогов:
+
+\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+	\item Полнота данных \\
+	Для корректного учета вредоносных растений, собранные данные о каждом наблюдении должны включать фотографию, краткое описание растения и места его произрастания, а также географические координаты.
+	Также необходимо хранить информацию о дате каждого наблюдения, пользователе, который его произвел, и текущий статус обработки.
+	\item Обработка данных \\
+	Обработка данных экологами-администраторами приложения в первую очередь заключается в проверке принадлежности экземпляра к отслеживаемому виду, его поиске и обезвреживании.
+	Такая обработка подразумевает присутствие двух ролей: пользователь, который может добавлять данные, и администратор, который может их обрабатывать.
+	Также для быстрого поиска данных необходима функция сортировки и поиска конкретного наблюдения.
+	\item Мобильный интерфейс \\
+	Для охвата более широкой группы добровольцев и их удобства необходима возможность отложенной отправки данных в случае, если пользователь находится вне зоны действия сети.
+	Этого возможно добиться при помощи создания мобильных приложений для операционных систем iOS и Android.
+	Также необходимо наличие вебинтерфейса отправки данных для пользователей, не желающих устанавливать приложение.
+	\item Доступ к данным \\
+	Для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения данных в формате “CSV”.
+	Также желательно наличие возможности демонстрации статистики собранных данных на сайте (доступа к данным по API).
+	\item Модерация данных \\
+	Для предотвращения неподобающих действий со стороны пользователей необходима также возможность модерации и сокрытия сообщений с ошибочными, более неактуальными или оскорбительными данными.
+	Желательно присутствие возможности ограничения доступа к приложению определенному пользователю, а также установления связи с ним в экстренных ситуациях (например, взлома аккаунта или блокировки).
+	Для этого при регистрации необходим сбор и проверки уникальной контактной информации пользователя, его номера телефона или адреса электронной почты.
+\end{enumerate}
+
+\nwln
+Результаты сравнения существующих аналогов приведены в таблице 1.
+
+\begin{xltabular}{\textwidth}{ l | l | l | l | l | l }
+	\caption{Результаты сравнения аналогов} \\
+
+	\multirow{2}{*}{}{Критерий} & \multicolumn{5}{l}{Название сервиса} \\
+	& iNaturalist & РИВР & \makecell{Google \\ MyMaps} & \makecell{Plant \\ Finder} & \makecell{Flora \\ Incognita} \\
+	Полнота данных & + & - & + & + & - \\
+	Обработка данных & + & - & + & + & - \\
+	Мобильный интерфейс & + & - & + & + & + \\
+	Доступ к данным & + & - & + & + & - \\
+	Модерация данных & + & - & + & + & -
+\end{xltabular}
+
+\nwln
+Из анализа соответствия существующих аналогов необходимым критериям становится очевидно, что на данный момент не существует сервиса, предоставляющего требуемую функциональность в полном объеме.
+Вследствии этого было принято решение о необходимости разработки такого сервиса. \\
+
+\tab
+В результате анализа источников было принято решение о необходимости разработки нового сервиса, позволяющего собирать и обрабатывать данные о распространении потенциально опасных для человека растений. 
+Этот сервис должен удовлетворять требованиям, описанным в пункте “Критерии сравнения аналогов”.
+Сервис должен обладать следующей функциональностью:
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+	\item У группы пользователей-волонтеров должна быть возможность отправлять данные о местонахождении встреченного ими потенциально опасного растения.
+	\item Для удобства отправки данных необходимо наличие как web-интерфейса, так и мобильного интерфейса (приложения) для платформ Android и iOS, позволяющего откладывать отправку в случае нахождения устройства вне зоны действия сети.
+	\item У группы экологов-администраторов должна быть возможность хранить, обрабатывать, а так же модерировать (в случае их неподобающего содержания) полученные данные.
+\end{itemize}
+
+\section{Описание решения}
