--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -14,4 +14,9 @@
 	
 	\bibitem{control}
 	Словарь русского языка [Текст]: толковый словарь современного русского литературного языка / С. И. Ожегов, ред. Н. Ю. Шведова – 16-е изд., исправленное. – Москва: Русский язык, 1984. – 251 с.
+	
+	\webbibitem{googlemymaps}{https://www.inaturalist.org}{Официальный сайт проекта iNaturalist}{26.12.2021}
+	\webbibitem{inaturalist}{https://www.google.com/maps/about/mymaps}{Страница с описанием сервиса Google MyMaps}{26.12.2021}
+	\webbibitem{plantfinder}{https://www.plantsmap.com/finder/plants}{Страница с описанием сервиса Plant Finder}{26.12.2021}
+	\webbibitem{floraincognita}{https://floraincognita.com}{Официальный сайт сервиса Flora Incognita}{11.01.2022}
 \end{thebibliography}
