--- a/report/definitions.tex
+++ b/report/definitions.tex
@@ -1,8 +1,8 @@
 \section{Определения}
 
 \begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-	\item \defineterm{report}{Отчет} -- вся необходимая информация, касающаяся наблюдения волонтером очага распространения потенциально опасного для человека растения.
-	\item \defineterm{processing}{Обработка данных} -- процесс сортировки отчетов и/или поиска по одному или нескольким признакам.
+	\item \defineterm{report}{Отчёт} -- вся необходимая информация, касающаяся наблюдения волонтёром очага распространения потенциально опасного для человека растения.
+	\item \defineterm{processing}{Обработка данных} -- процесс сортировки отчётов и/или поиска по одному или нескольким признакам.
 	\item \defineterm{users}{Пользователи системы} -- волонтёры, предоставляющие системе данные о нахождении очагов распространения потенциально опасных для человека растений.
 	\item \defineterm{admins}{Администраторы системы} -- работники, ответственные за модерацию информации, присылаемой системе, а также за общение с пользователями системы.
 	\item \defineterm{specialists}{Специалисты системы} -- экологи, исследующие и наблюдающие за опасными для человека видами растений.
