--- a/report/document.tex
+++ b/report/document.tex
@@ -44,10 +44,10 @@
 
 \nwln
 Для осуществления контроля (по данному выше определению) необходимо хранение информации об очагах распространения опасных растений, которая включает в себя фотографии растения, его географические координаты и краткое описание, данное обнаружившим его человеком, самого растения, а также места его произрастания.
-Такой набор данных в данной работе будет называться \linkterm{report}{отчет}.
-В случае наблюдения за несколькими видами потенциально опасных растений каждый отчет также должен содержать информацию о видовой принадлежности обнаруженного растения.
-В следствии того, что эти сведения со временем могут терять актуальность или же требовать модерации, в отчете необходимо также хранить информацию о статусе данных и дате совершения наблюдения.
-Предлашается использование трёх статусов: \textquote{необработано}, \textquote{актуально}, \textquote{неактуально}; в зависимости от необходимых мер контроля можно добавить и другие.
+Такой набор данных в данной работе будет называться \linkterm{report}{отчёт}.
+В случае наблюдения за несколькими видами потенциально опасных растений каждый отчёт также должен содержать информацию о видовой принадлежности обнаруженного растения.
+В следствии того, что эти сведения со временем могут терять актуальность или же требовать модерации, в отчёте необходимо также хранить информацию о статусе данных и дате совершения наблюдения.
+Предлагается использование трёх статусов: \textquote{необработано}, \textquote{актуально}, \textquote{неактуально}; в зависимости от необходимых мер контроля можно добавить и другие.
 
 \nwln
 Для осуществления поиска и анализа данных необходима функция сортировки и поиска конкретного наблюдения по нескольким признакам. Такая функция в данной работе будет называться \linkterm{processing}{обработка данных}. \\
@@ -55,18 +55,18 @@
 \subsection{Источник информации}
 
 \tab
-В качестве источника информации и средства наблюдения предлагается использовать неограниченное количество волонтеров, заинтересованных в решении экологических проблем.
+В качестве источника информации и средства наблюдения предлагается использовать неограниченное количество волонтёров, заинтересованных в решении экологических проблем.
 Эти люди в данной работе будут называться \linkterm{users}{пользователями} системы.
-Такое решение позволит получать большое количество актуальной информации, но в следствие отсутствия профессиональной подготовки волонтеров точность такой информации снизится.
+Такое решение позволит получать большое количество актуальной информации, но в следствие отсутствия профессиональной подготовки волонтёров точность такой информации снизится.
 Также возможно возникновение случаев необходимости модерации присланных волонтёрами данных.
 
 \nwln
-В качестве меры модерации предлагается необходимость регистрации волонтёров при помощи подтвержденного адреса электронной почты (в последствии возможно добавление других методов авторизации), а также наличие возможности редактирования и удаления всех загруженных данных.
-Кроме того, для предоставления возможности связи с волонтёрами, в каждый отчет необходимо включить информацию о пользователе, совершившем наблюдение, описанное в отчете.
-Люди, в обязанности которых будет входить модерация отчетов и взаимодействие с пользователями в данной работе будут называться \linkterm{admins}{администраторами} системы.
+В качестве меры модерации предлагается необходимость регистрации волонтёров при помощи подтверждённого адреса электронной почты (в последствии возможно добавление других методов авторизации), а также наличие возможности редактирования и удаления всех загруженных данных.
+Кроме того, для предоставления возможности связи с волонтёрами, в каждый отчёт необходимо включить информацию о пользователе, совершившем наблюдение, описанное в отчёте.
+Люди, в обязанности которых будет входить модерация отчётов и взаимодействие с пользователями в данной работе будут называться \linkterm{admins}{администраторами} системы.
 
 \nwln
-В качестве меры повышения точности присланных волонтёрами данных предлагается создание автоматической системы распознавания определенных видов растений на фотографиях, а также ручная проверка присланных пользователями данных.
+В качестве меры повышения точности присланных волонтёрами данных предлагается создание автоматической системы распознавания определённых видов растений на фотографиях, а также ручная проверка присланных пользователями данных.
 Люди, в обязанности которых будет входить проверка и обработка присланных данных в данной работе будут называться \linkterm{specialists}{специалистами} системы. \\
 
 \subsection{Доступ к данным}
@@ -94,19 +94,19 @@
 
 \begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
 	\item iNaturalist \\
-	iNaturalist [3] - сервис для наблюдения за живыми организмами, разработанный Калифорнийской академией наук совместно с National Geographic.
-	Сервис позволяет глобальному сообществу волонтеров наблюдать за живыми организмами и присылать собранную информацию о них на сайт.
-	Такие отчеты находятся в общем доступе и могут быть загружены с официального сайта.
+	iNaturalist\cite{inaturalist} - сервис для наблюдения за живыми организмами, разработанный Калифорнийской академией наук совместно с National Geographic.
+	Сервис позволяет глобальному сообществу волонтёров наблюдать за живыми организмами и присылать собранную информацию о них на сайт.
+	Такие отчёты находятся в общем доступе и могут быть загружены с официального сайта.
 	\item РИВР \\
-	РИВР [1] (распространение инвазивных видов растений) - открытая база данных, разработанная и поддерживаемая ИБ Коми НЦ УрО РАН.
+	РИВР\cite{rivr} (распространение инвазивных видов растений) - открытая база данных, разработанная и поддерживаемая ИБ Коми НЦ УрО РАН.
 	Посвящена исключительно Борщевику Сосновского и его распространению на территории России.
 	Позволяет пользователям отправлять данные о найденных местах произрастания растения, которые на данный момент доступны только для просмотра на сайте.
 	\item Google MyMaps \\
-	Google MyMaps [4] - это сервис для создания пользовательских карт на основе сервиса Google Maps.
+	Google MyMaps\cite{googlemymaps} - это сервис для создания пользовательских карт на основе сервиса Google Maps.
 	Позволяет создавать карты с набором пользовательских отметок и их описанием, доступ к таким картам осуществляется так же, как к файлам, хранящимся на Google Drive.
 	Также позволяет единовременно импортировать данные их .csv файла или из Google SpreadSheets.
 	\item Plant Finder \\
-	Plant Finder [5] - сервис, созданный для документации и
+	Plant Finder\cite{plantfinder} - сервис, созданный для документации и
 	учета мест произрастания и хранения растений. Сервис
 	предоставляет пользователям возможность отмечать на
 	карте места собранных ими коллекций растений. Также
@@ -115,7 +115,7 @@
 	таких частных картах есть возможность открытия
 	публичного доступа к отметкам и данным.
 	\item Flora Incognita \\
-	Flora Incognita [6] - приложение, позволяющее
+	Flora Incognita\cite{floraincognita} - приложение, позволяющее
 	идентифицировать и сохранять данные о найденных
 	растениях. Оно разработано совместно с Technische
 	Universität Ilmenau и Max-Planck-Institut für Biogeochemie.
@@ -124,50 +124,49 @@
 \end{enumerate}
 
 \nwln
-Критерии сравнения аналогов:
+Для сравнения аналогов были использованы следующие критерии, основанные на анализе предметной области:
 
-\begin{enumerate}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
-	\item Полнота данных \\
-	Для корректного учета вредоносных растений, собранные данные о каждом наблюдении должны включать фотографию, краткое описание растения и места его произрастания, а также географические координаты.
-	Также необходимо хранить информацию о дате каждого наблюдения, пользователе, который его произвел, и текущий статус обработки.
-	\item Обработка данных \\
-	Обработка данных экологами-администраторами приложения в первую очередь заключается в проверке принадлежности экземпляра к отслеживаемому виду, его поиске и обезвреживании.
-	Такая обработка подразумевает присутствие двух ролей: пользователь, который может добавлять данные, и администратор, который может их обрабатывать.
-	Также для быстрого поиска данных необходима функция сортировки и поиска конкретного наблюдения.
-	\item Мобильный интерфейс \\
-	Для охвата более широкой группы добровольцев и их удобства необходима возможность отложенной отправки данных в случае, если пользователь находится вне зоны действия сети.
-	Этого возможно добиться при помощи создания мобильных приложений для операционных систем iOS и Android.
-	Также необходимо наличие вебинтерфейса отправки данных для пользователей, не желающих устанавливать приложение.
-	\item Доступ к данным \\
-	Для удобства использования собранных данных в полевых условиях (например, во время поиска и обезвреживания растения), а также сбора статистики необходимо наличие способа выгрузки и сохранения данных в формате “CSV”.
-	Также желательно наличие возможности демонстрации статистики собранных данных на сайте (доступа к данным по API).
-	\item Модерация данных \\
-	Для предотвращения неподобающих действий со стороны пользователей необходима также возможность модерации и сокрытия сообщений с ошибочными, более неактуальными или оскорбительными данными.
-	Желательно присутствие возможности ограничения доступа к приложению определенному пользователю, а также установления связи с ним в экстренных ситуациях (например, взлома аккаунта или блокировки).
-	Для этого при регистрации необходим сбор и проверки уникальной контактной информации пользователя, его номера телефона или адреса электронной почты.
-\end{enumerate}
+\begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
+	\item Полнота данных -- возможность хранения всех необходимых для отчётов данных, а именно: фотографию и краткое описание растения, описание места его произрастания, географические координаты, дату и время обнаружения, данные о пользователе, который его произвёл, и текущий статус отчета.
+	\item Обработка данных -- возможность проверки принадлежности растений к отслеживаемым видам, а также обработки данных.
+	\item Мобильный интерфейс -- возможность отправки отчётов в систему как при помощи приложений для операционных систем iOS и Android так и при помощи вебинтерфейса, а также существование API для сбора данных.
+	\item Доступ к данным -- возможность выгрузки и сохранения данных в формате “CSV”, наличие демонстрации статистики собранных данных на сайте, а также наличие API для демонстрации данных.
+	\item Модерация данных -- возможность модерирования данных, управления аккаунтами пользователей, а также связи с пользователями при помощи подтверждённых при регистрации методов.
+\end{itemize}
 
 \nwln
 Результаты сравнения существующих аналогов приведены в таблице 1.
 
-\begin{xltabular}{\textwidth}{ l | l | l | l | l | l }
-	\caption{Результаты сравнения аналогов} \\
+\begin{xltabular}{\textwidth}{ | l | c | c | c | c | c | }
+	\longcaption{Результаты сравнения аналогов}
 
-	\multirow{2}{*}{}{Критерий} & \multicolumn{5}{l}{Название сервиса} \\
+	\hline
+	\multirowcell{2}{Критерий} & \multicolumn{5}{ c | }{Название сервиса} \\
+	\cline{2-6}
 	& iNaturalist & РИВР & \makecell{Google \\ MyMaps} & \makecell{Plant \\ Finder} & \makecell{Flora \\ Incognita} \\
+	\hline
 	Полнота данных & + & - & + & + & - \\
-	Обработка данных & + & - & + & + & - \\
-	Мобильный интерфейс & + & - & + & + & + \\
-	Доступ к данным & + & - & + & + & - \\
-	Модерация данных & + & - & + & + & -
+	\hline
+	Обработка данных & - & - & - & + & - \\
+	\hline
+	Мобильный интерфейс & + & - & + & - & + \\
+	\hline
+	Доступ к данным & + & - & - & + & + \\
+	\hline
+	Модерация данных & + & - & - & + & - \\
+	\hline
 \end{xltabular}
 
 \nwln
-Из анализа соответствия существующих аналогов необходимым критериям становится очевидно, что на данный момент не существует сервиса, предоставляющего требуемую функциональность в полном объеме.
-Вследствии этого было принято решение о необходимости разработки такого сервиса. \\
+Из анализа соответствия существующих аналогов необходимым критериям становится очевидно, что на данный момент не существует системы, предоставляющей требуемую функциональность в полном объёме.
+Вследствие этого было принято решение о необходимости разработки такой системы.
 
-\tab
-В результате анализа источников было принято решение о необходимости разработки нового сервиса, позволяющего собирать и обрабатывать данные о распространении потенциально опасных для человека растений. 
+\section{Формулировка требований и постановка задачи}
+
+\#\# TODO after this point!!
+
+\subsection{Формулировка требований}
+
 Этот сервис должен удовлетворять требованиям, описанным в пункте “Критерии сравнения аналогов”.
 Сервис должен обладать следующей функциональностью:
 \begin{itemize}[topsep=0pt, parsep=0pt, itemsep=0pt, wide=0.5cm]
@@ -175,5 +174,15 @@
 	\item Для удобства отправки данных необходимо наличие как web-интерфейса, так и мобильного интерфейса (приложения) для платформ Android и iOS, позволяющего откладывать отправку в случае нахождения устройства вне зоны действия сети.
 	\item У группы экологов-администраторов должна быть возможность хранить, обрабатывать, а так же модерировать (в случае их неподобающего содержания) полученные данные.
 \end{itemize}
+
+\subsection{Постановка задачи}
+
+\subsection{Сценарии использования}
+
+\section{Архитектура решения}
+
+\subsection{Используемые технологии}
+
+\subsection{Модель данных}
 
 \section{Описание решения}
