github pages web fix

--- a/report/document.tex
+++ b/report/document.tex
@@ -136,26 +136,7 @@
 
 \nwln
 Результаты сравнения существующих аналогов приведены в таблице 1.
-
-\begin{xltabular}{\textwidth}{ | l | c | c | c | c | c | }
-	\longcaption{Результаты сравнения аналогов}
-
-	\hline
-	\multirowcell{2}{Критерий} & \multicolumn{5}{ c | }{Название сервиса} \\
-	\cline{2-6}
-	& iNaturalist & РИВР & \makecell{Google \\ MyMaps} & \makecell{Plant \\ Finder} & \makecell{Flora \\ Incognita} \\
-	\hline
-	Полнота данных & + & - & + & + & - \\
-	\hline
-	Обработка данных & - & - & - & + & - \\
-	\hline
-	Мобильный интерфейс & + & - & + & - & + \\
-	\hline
-	Доступ к данным & + & - & - & + & + \\
-	\hline
-	Модерация данных & + & - & - & + & - \\
-	\hline
-\end{xltabular}
+\tableone
 
 \nwln
 Из анализа соответствия существующих аналогов необходимым критериям становится очевидно, что на данный момент не существует системы, предоставляющей требуемую функциональность в полном объёме.
@@ -186,3 +167,5 @@
 \subsection{Модель данных}
 
 \section{Описание решения}
+
+\section{Заключение}
