--- a/report/report.tex
+++ b/report/report.tex
@@ -25,6 +25,9 @@
 	\input{task.tex}
 	\input{plan.tex}
 	
+	\input{tables.tex}
+	\input{images.tex}
+	
 	\begin{spacing}{1.5}
 		\input{contents.tex}
 		
