client (almost) done + additional chapter in report

--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -1,11 +1,13 @@
-\bibliographystyle{unsrt}
+\clearpage
+\newcont{Список Литературы}
+
+\bibliographystyle{unsrtnat}
+
 \begin{thebibliography}{99}
 	\bibitem{alien-plants}
 	https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7194640/
 	\bibitem{invasive-plants}
 	https://www.sciencedaily.com/releases/2022/02/220210125820.htm
-	\bibitem{poisonous-ivy}
-	nytimes.com/interactive/projects/cp/climate/2015-paris-climate-talks/what-climate-change-looks-like-poison-ivy
 	
 	\bibitem{heracleum}
 	https://cyberleninka.ru/article/n/borschevik-sosnovskogo-v-rossiyskoy-federatsii/viewer
@@ -19,4 +21,22 @@
 	\webbibitem{inaturalist}{https://www.google.com/maps/about/mymaps}{Страница с описанием сервиса Google MyMaps}{26.12.2021}
 	\webbibitem{plantfinder}{https://www.plantsmap.com/finder/plants}{Страница с описанием сервиса Plant Finder}{26.12.2021}
 	\webbibitem{floraincognita}{https://floraincognita.com}{Официальный сайт сервиса Flora Incognita}{11.01.2022}
+	
+	
+	
+	\webbibitem{un-biodiv}{https://www.cbd.int/convention/text/}{United Nations Convention on Biological Diversity (CBD)}{17.05.2022}
+	\bibitem{poisonous-ivy}
+	nytimes.com/interactive/projects/cp/climate/2015-paris-climate-talks/what-climate-change-looks-like-poison-ivy
+	\bibitem{heracleum-desc} Виноградова В.М. Борщевик — Heracleum L. // Флора Восточной Европы. — М.; СПб.: Товарищество научных изданий КМК, 2004, Т. 11. – С. 404.
+	\bibitem{kommersant} https://www.kommersant.ru/doc/2781947
+	\bibitem{er-initiative} https://er.ru/activity/news/zachem-neobhodima-federalnaya-programma-po-borbe-s-borshevikom-razyasnyaet-vladimir-burmatov
+	\bibitem{mos-expenses} https://www.agroinvestor.ru/business-pages/34172-sovremennye-metodiki-sposobny-sokratit-raskhody-na-borbu-s-borshchevikom-v-neskolko-raz/
+	\bibitem{len-expenses} https://www.lenoblzaks.ru/publics/single/115/63977
+	\bibitem{rural-measures} https://fsvps.gov.ru/ru/fsvps/news/36717.html
+	\bibitem{countryside-measures} "Земельный кодекс Российской Федерации" от 25.10.2001 N 136-ФЗ (ред. от 01.05.2022)
+	\bibitem{rural-law} 
+	Федеральный закон "Об обороте земель сельскохозяйственного назначения" от 24.07.2002 N 101-ФЗ
+	\bibitem{business-online} https://www.business-gazeta.ru/article/412341
+	\bibitem{govern-law} Распоряжение от 25 ноября 2019 г. N 35-р об утверждении методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций	
+	\bibitem{nature-law} Распоряжение Минприроды России от 25.11.2019 N 35-р "Об утверждении Методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций"
 \end{thebibliography}
