json collection enchanced

--- a/report/bibliography.tex
+++ b/report/bibliography.tex
@@ -36,7 +36,7 @@
 	\bibitem{countryside-measures} "Земельный кодекс Российской Федерации" от 25.10.2001 N 136-ФЗ (ред. от 01.05.2022)
 	\bibitem{rural-law} 
 	Федеральный закон "Об обороте земель сельскохозяйственного назначения" от 24.07.2002 N 101-ФЗ
-	\bibitem{business-online} https://www.business-gazeta.ru/article/412341
+	\webbibitem{business-online}{https://www.business-gazeta.ru/article/412341}{Пересказ заседания Государственного Совета, опубликованный в газете Бизнес Online}{17.05.2022}
 	\bibitem{govern-law} Распоряжение от 25 ноября 2019 г. N 35-р об утверждении методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций	
 	\bibitem{nature-law} Распоряжение Минприроды России от 25.11.2019 N 35-р "Об утверждении Методических рекомендаций по структуре и содержанию программ сохранения биологического разнообразия коммерческих организаций"
 \end{thebibliography}
